css/spotterstyle.css
/* ... */
@media (max-width: 767px) {
  #outer-wrapper, #inner-wrapper, #page-canvas {
    display: block;
    height: auto;
  }

  blockquote {
    display: block;
    text-align: center;
  }
  blockquote figure {
    display: block;
    float: none;
    width: 100%;
  }
  blockquote .description {
    display: block;
    padding: 0;
  }

  .block {
    clear: both;
  }
  .block .categories {
    display: table;
  }
  .block .categories > li {
    width: 100%;
  }

  .carousel.wide .slide {
    padding: 0;
  }
  .carousel.wide .slide .inner {
    display: block;
  }
  .carousel.wide .slide .inner .image {
    float: none;
    margin-bottom: 30px;
    margin-right: 0;
    width: 100%;
  }
  .carousel.wide .owl-controls {
    top: inherit;
    bottom: -20px;
  }

  .dropzone.profile-picture > img {
    width: 100%;
  }

  .item.list.admin-view {
    display: block;
  }
  .item.list.admin-view .description {
    display: block;
    padding-bottom: 20px;
    padding-right: 0px;
    text-align: center;
    width: 100%;
  }
  .item.list .image {
    display: block;
    width: 100%;
    height: auto;
    margin-right: 0;
  }
  .item.list .wrapper {
    display: block;
  }

  .item-specific .inner .content {
    display: block;
  }

  .logos {
    display: block;
  }
  .logos .logo {
    display: block;
    margin-bottom: 50px;
  }

  .faq-form .wrapper > button {
    float: none !important;
    margin-top: 10px;
  }

  .filter > div {
    float: none !important;
    text-align: center;
  }
  .filter .buttons {
    margin-bottom: 20px;
  }
  .filter .bootstrap-select {
    text-align: left;
  }

  .header .wrapper .navigation-items .wrapper .user-area {
    display: none;
  }

  .map-canvas {
    height: 100%;
    overflow: scroll;
  }
  .map-canvas .map {
    display: block;
    float: none;
    width: 100% !important;
    height: 100%;
  }
  .map-canvas .map .toggle-navigation {
    display: none !important;
  }
  .map-canvas .map .search-bar.horizontal {
    position: top;
  }
  .map-canvas .map .search-bar.horizontal .input-row .form-group {
    width: 100% !important;
    margin-bottom: 10px;
  }
  .map-canvas .map .search-bar.horizontal .input-row .form-group button[type="submit"] {
    width: 100%;
  }
  .map-canvas .map .toggle-navigation {
    display: none;
  }
  .map-canvas .items-list {
    display: block;
    float: left;
    height: auto;
    width: 100% !important;
    overflow: hidden;
  }
  .map-canvas .items-list .inner .results li .item {
    margin-bottom: 30px;
  }
  .map-canvas .items-list .inner .results li .item .image {
    display: block;
    height: auto;
    width: 100%;
  }
  .map-canvas .items-list .inner .results li .item .image .inner {
    height: auto;
  }
  .map-canvas .items-list .inner .results li .item .wrapper {
    display: block;
  }

  .main-search .input-row .form-group {
    width: 100% !important;
    margin-bottom: 10px;
  }
  .main-search .input-row .form-group button[type="submit"] {
    width: 100%;
  }

  .modal-window {
    width: 100%;
  }

  .modal-window .modal-wrapper {
    display: block;
  }

  .modal-window .modal-wrapper .modal-body {
    width: 100%;
    display: block;
  }

  .modal-window .modal-wrapper .modal-body .gallery {
    display: block;
    width: 100%;
    height: auto;
  }

  .modal-window .modal-wrapper .modal-body .modal-content {
    display: block;
    width: 100%;
  }

  .modal-window .modal-wrapper > h2, .modal-window .modal-wrapper > figure, .modal-window .modal-wrapper > .rating {
    margin-left: 20px;
  }

  .search-bar.horizontal .main-search.narrow {
    padding: 0;
  }

  .testimonials {
    padding: 20px;
  }
  .testimonials .owl-controls {
    bottom: 20px;
    top: inherit;
    right: 10px;
  }
}
/* 10. Animations */
.fade_in {
  -webkit-animation: fade_in_animation .5s forwards;
  animation: fade_in_animation .5s forwards;
}

@keyframes fade_in_animation {
  0% {
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
    opacity: 0;
  }

  100% {
    filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
    opacity: 1;
  }
}
@-webkit-keyframes fade_in_animation {
  0% {
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
    opacity: 0;
  }

  100% {
    filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
    opacity: 1;
  }
}
.fade_out {
  -webkit-animation: fade_out_animation .3s forwards;
  animation: fade_out_animation .3s forwards;
}

@keyframes fade_out_animation {
  0% {
    filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
    opacity: 1;
  }

  100% {
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
    opacity: 0;
  }
}
@-webkit-keyframes fade_out_animation {
  0% {
    filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
    opacity: 1;
  }

  100% {
    filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
    opacity: 0;
  }
}
.fade-in {
  -moz-transition: 0.3s;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  -webkit-opacity: 1 !important;
  opacity: 1 !important;
  -webkit-animation: fadeIn .3s;
  animation: fadeIn 3s;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1 !important;
  }
}
@-webkit-keyframes fadeIn {
  0% {
    -webkit-opacity: 0;
  }

  100% {
    -webkit-opacity: 1 !important;
  }
}
.fade-out {
  -moz-transition: 0.3s;
  -webkit-transition: 0.3s;
  transition: 0.3s;
  -webkit-opacity: 0 !important;
  opacity: 0 !important;
  -webkit-animation: fadeOut .3s;
  animation: fadeOut .3s;
}

@keyframes fadeOut {
  from {
    opacity: 1;
  }

  to {
    opacity: 0 !important;
  }
}
@-webkit-keyframes fadeOut {
  from {
    -webkit-opacity: 1;
  }

  to {
    -webkit-opacity: 0 !important;
  }
}
.rotate {
  -webkit-animation: rotate 1s;
  animation: rotate 1s;
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}
/* ... */

